# ceri-m1-ecommerce-2022

./: .gitignore  README.md  package-lock.json
.github/workflows/: main.yml  main_perso.yml
backend/: .gitignore  Dockerfile  dev_docker-compose.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/db/: vinyl_db.sql  vinyl_db_model.mwb
backend/src/: db.py  main.py  model.py
backend/tests/: test_main.py
frontend/: .env  Dockerfile  README.md  docker-compose.yml  env.d.ts  index.html  package-lock.json  package.json  tsconfig.config.json  vite.config.ts  vue.config.js
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/assets/: main.css
frontend/src/components/: Account.vue  Carousel.vue  Detail-Products.vue  EditProducts.vue  Menu.vue  Products.vue  Profile.vue  ShoppingProducts.vue
frontend/src/components/icons/: IconFavIcon.vue
frontend/src/router/: index.ts
frontend/src/stores/: store.js
frontend/src/test/: connection.test.js
frontend/src/views/: BackOfficeView.vue  DetailProductView.vue  HomeView.vue  ShoppingCartView.vue
terraform/: deploy.tf  deploy_backend.tf  deploy_frontend.t  deploy_frontend.tf
terraform/backend/: deploy_backend.tf
terraform/frontend/: deploy_frontend.tf
terraform/perso/backend/: deploy_backend.tf
terraform/perso/frontend/: deploy_frontend.tf
