[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jacob Michalski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
sqlmodel = "^0.0.8"
uvicorn = "^0.18.3"
wheel = "^0.37.1"
mysql = "^0.0.3"
mysqlclient = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3" 
pytest-mock = "*"
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
pythonpath = "."
